2015-07-31  Per Bothner  <per@bothner.com>

	* SwingContent.java: Update for CharBuffer changes.

2015-07-02  Per Bothner  <per@bothner.com>

	* SwingContent.java (delete): Update parameter convention.
	* SwingContent.java: Likewise.

2014-02-16  Per Bothner  <per@bothner.com>

	* SwingDisplay.java: Make sure Error is uncaught or re-thrown.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2009-01-04  Per Bothner  <per@bothner.com>

	* SwingDisplay.java (addText): Initialize JTextField properly.

2008-10-29  Per Bothner  <per@bothner.com>

	* SwingContent.java (GapPosition.<init>): Swing Position objects have
	the 'isAfter' property, except for the case when the offset is 0.
	This basically reverts the change from 2005-12-22 (revision 4996).
	I'm confused - I have no idea why I made that change ...

2006-01-11  Per Bothner  <per@bothner.com>

	* SwingDisplay.java: New class, extends gnu.models.Display.
	(ProcActionListener): New non-public class, extends ActionListener.
	(SwingBox): New non-public class, extends javax.swing.Box.
	(SwingLabel): New non-public class, extends JLabel.
	(ComponentModule): New non-public helper class, extends Model.
	* SwingButton.java: Nwe implement ModelListener.
	Remove various "ButtonModel" fields and methods - just sue SwModel.
	Add some hooks for keeping track for foreground, background, and text.
	* SwingContainer.java: Removed interface.  Functionality is
	now in SwingDisplay class.
	* SwingFrame.java: Now implements gnu.kawa.models.Window.
	(getDisplay, setContent, setMenuBar, open): New methods.
	(addComponent): Various updates.
	* Makefile.am: Update for new and removed java files.

2005-12-22  Per Bothner  <per@bothner.com>

	* SwingContent.java (createPosition): It turns out Swing is happier
	if positions are always "before".
	(GapPosition.<init>): Hardwire 'isAfter' to 'false'.

2005-12-11  Per Bothner  <per@bothner.com>
